logs/django-debug-toolbar-django13.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/debug_toolbar'...
Listing './lib/python3.5/site-packages/debug_toolbar/management'...
Listing './lib/python3.5/site-packages/debug_toolbar/management/commands'...
Compiling './lib/python3.5/site-packages/debug_toolbar/management/commands/debugsqlshell.py'...
***   File "./lib/python3.5/site-packages/debug_toolbar/management/commands/debugsqlshell.py", line 15
    print sqlparse.format(raw_sql, reindent=True)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/debug_toolbar/media'...
Listing './lib/python3.5/site-packages/debug_toolbar/media/debug_toolbar'...
Listing './lib/python3.5/site-packages/debug_toolbar/media/debug_toolbar/css'...
Listing './lib/python3.5/site-packages/debug_toolbar/media/debug_toolbar/img'...
Listing './lib/python3.5/site-packages/debug_toolbar/media/debug_toolbar/js'...
Listing './lib/python3.5/site-packages/debug_toolbar/panels'...
Listing './lib/python3.5/site-packages/debug_toolbar/templates'...
Listing './lib/python3.5/site-packages/debug_toolbar/templates/debug_toolbar'...
Listing './lib/python3.5/site-packages/debug_toolbar/templates/debug_toolbar/panels'...
Listing './lib/python3.5/site-packages/debug_toolbar/toolbar'...
Compiling './lib/python3.5/site-packages/debug_toolbar/toolbar/loader.py'...
***   File "./lib/python3.5/site-packages/debug_toolbar/toolbar/loader.py", line 53
    raise exceptions.ImproperlyConfigured, '%s isn\'t a debug panel module' % panel_path
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/debug_toolbar/utils'...
Listing './lib/python3.5/site-packages/debug_toolbar/utils/sqlparse'...
Listing './lib/python3.5/site-packages/debug_toolbar/utils/sqlparse/engine'...
Compiling './lib/python3.5/site-packages/debug_toolbar/utils/sqlparse/lexer.py'...
***   File "./lib/python3.5/site-packages/debug_toolbar/utils/sqlparse/lexer.py", line 78
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_debug_toolbar_django13-0.8.4.egg-info'...
Listing './lib/python3.5/site-packages/example'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
